--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
+    "@nuxtjs/style-resources": "^1.0.0",
     "@nuxtjs/tailwindcss": "^1.0.0",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-jest": "^24.1.0",
     "jest": "^24.1.0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^10.0.2",
     "vue-jest": "^4.0.0-0"
   }
 }
