--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "@nuxtjs/composition-api": "^0.12.3",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "vuex-composition-helpers": "^1.0.21"
   },
   "devDependencies": {
     "@nuxtjs/style-resources": "^1.0.0",
